--- a/ExUn2Tienda.html
+++ b/ExUn2Tienda.html
@@ -69,7 +69,7 @@
             <td><p id="dos">0</p></td>
         </tr>
         <tr>
-            <td><input id="boton5" type="button" value="Calcular" onclick="calcular"></td>
+            <td><input id="boton5" type="button" value="Calcular" onclick="Calcular"></td>
             <td><p id="resultado"></p></td>
         </tr>
     </table>
