--- a/ExUn2Tienda.html
+++ b/ExUn2Tienda.html
@@ -11,9 +11,9 @@
     <title>Tienda compra y venta</title>
 </head>
 <body>
-    <p id="nombrepag">HardSoft</p>
-    <p id="subtitulopag">Tienda electronica</p>
-    <table id="tablaproductos" align="center">
+    <p id="Nombrepag">HardSoft</p>
+    <p id="Subtitulopag">Tienda electronica</p>
+    <table id="Tablaproductos" align="center">
         <tr>
             <th>Producto</th>
             <th>Tipo</th>
