Actualizar ExUn2Tienda.html

--- a/ExUn2Tienda.html
+++ b/ExUn2Tienda.html
@@ -22,28 +22,28 @@
             <th>Agregar al carro</th>
         </tr>
         <tr>
-            <td id="objeto1">Teclado inalambrico</td>
+            <td id="Objeto1">Teclado inalambrico</td>
             <td id="numero1">Hardware</td>
             <td>Lenovo Ideapad</td>
             <td>$140</td>
             <td><button onclick="agrecarro1()" id="boton1">+</button></td>
         </tr>
         <tr>
-            <td id="objeto2">Raton inalambrico</td>
+            <td id="Objeto2">Raton inalambrico</td>
             <td id="numero2">Hardware</td>
             <td>Dell</td>
             <td>$675</td>
             <td><button onclick="agrecarro2()" id="boton2">+</button></td>
         </tr>
         <tr>
-            <td id="objeto3">Office Proffesional Plus 2019</td>
+            <td id="Objeto3">Office Proffesional Plus 2019</td>
             <td id="numero3">Software</td>
             <td>Microsoft</td>
             <td>$198</td>
             <td><button onclick="agrecarro3()" id="boton3">+</button></td>
         </tr>
         <tr>
-            <td id="objeto4">Windows 10 Pro</td>
+            <td id="Objeto4">Windows 10 Pro</td>
             <td id="numero4">Software</td>
             <td>Microsoft</td>
             <td>$2800</td>
