Actualizar ExUn2Tienda.html

--- a/ExUn2Tienda.html
+++ b/ExUn2Tienda.html
@@ -11,9 +11,9 @@
     <title>Tienda compra y venta</title>
 </head>
 <body>
-    <p id="Nombrepag">HardSoft</p>
-    <p id="Subtitulopag">Tienda electronica</p>
-    <table id="Tablaproductos" align="center">
+    <p id="NombrePag">HardSoft</p>
+    <p id="SubtituloPag">Tienda electronica</p>
+    <table id="TablaProductos" align="center">
         <tr>
             <th>Producto</th>
             <th>Tipo</th>
@@ -23,36 +23,36 @@
         </tr>
         <tr>
             <td id="Objeto1">Teclado inalambrico</td>
-            <td id="numero1">Hardware</td>
+            <td id="Numero1">Hardware</td>
             <td>Lenovo Ideapad</td>
             <td>$140</td>
-            <td><button onclick="agrecarro1()" id="boton1">+</button></td>
+            <td><button onclick="agrecarro1()" id="Boton1">+</button></td>
         </tr>
         <tr>
             <td id="Objeto2">Raton inalambrico</td>
             <td id="numero2">Hardware</td>
             <td>Dell</td>
             <td>$675</td>
-            <td><button onclick="agrecarro2()" id="boton2">+</button></td>
+            <td><button onclick="agrecarro2()" id="Boton2">+</button></td>
         </tr>
         <tr>
             <td id="Objeto3">Office Proffesional Plus 2019</td>
             <td id="numero3">Software</td>
             <td>Microsoft</td>
             <td>$198</td>
-            <td><button onclick="agrecarro3()" id="boton3">+</button></td>
+            <td><button onclick="agrecarro3()" id="Boton3">+</button></td>
         </tr>
         <tr>
             <td id="Objeto4">Windows 10 Pro</td>
             <td id="numero4">Software</td>
             <td>Microsoft</td>
             <td>$2800</td>
-            <td><button onclick="agrecarro4()" id="boton4">+</button></td>
+            <td><button onclick="agrecarro4()" id="Boton4">+</button></td>
         </tr>
     </table>
     <br>
     <br>
-    <table id="tablacarro">
+    <table id="TablaCarro">
         <tr>
             <th>Carro</th>
         </tr>
@@ -69,7 +69,7 @@
             <td><p id="dos">0</p></td>
         </tr>
         <tr>
-            <td><input id="boton5" type="button" value="Calcular" onclick="Calcular"></td>
+            <td><input id="Boton5" type="button" value="Calcular" onclick="Calcular"></td>
             <td><p id="resultado"></p></td>
         </tr>
     </table>
