--- a/ExUn2Tienda.html
+++ b/ExUn2Tienda.html
@@ -30,21 +30,21 @@
         </tr>
         <tr>
             <td id="Objeto2">Raton inalambrico</td>
-            <td id="numero2">Hardware</td>
+            <td id="Numero2">Hardware</td>
             <td>Dell</td>
             <td>$675</td>
             <td><button onclick="agrecarro2()" id="Boton2">+</button></td>
         </tr>
         <tr>
             <td id="Objeto3">Office Proffesional Plus 2019</td>
-            <td id="numero3">Software</td>
+            <td id="Numero3">Software</td>
             <td>Microsoft</td>
             <td>$198</td>
             <td><button onclick="agrecarro3()" id="Boton3">+</button></td>
         </tr>
         <tr>
             <td id="Objeto4">Windows 10 Pro</td>
-            <td id="numero4">Software</td>
+            <td id="Numero4">Software</td>
             <td>Microsoft</td>
             <td>$2800</td>
             <td><button onclick="agrecarro4()" id="Boton4">+</button></td>
