Actualizar ExUn2Tienda.html

--- a/ExUn2Tienda.html
+++ b/ExUn2Tienda.html
@@ -60,11 +60,11 @@
             <td>Seleccionados</td>
             <td>Cantidad</td>
         </tr>
-        <tr class="lista">
+        <tr class="Lista">
             <td>Hardware</td>
             <td><p id="uno">0</p></td>
         </tr>
-        <tr class="lista">
+        <tr class="Lista">
             <td>Software</td>
             <td><p id="dos">0</p></td>
         </tr>
